[project]
name = "baseline"
version = "0.1.0"
description = ""
authors = [
    {name = "Kailas PS",email = "kailaspsudheer@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.28",
    "djangorestframework (>=3.16.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
